# OEP-desktop-c-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  effect_player.cpp  effect_player.hpp  glfw_user_data.hpp  main.cpp  render_context.cpp  render_context.hpp
bnb_sdk_c_api/: CMakeLists.txt
cmake/: copy_libs.cmake  utils.cmake
interfaces/: formats.hpp  nv12_image.hpp  offscreen_effect_player.hpp  offscreen_render_target.hpp  pixel_buffer.hpp
libraries/: CmakeLists.txt
libraries/camera/: CMakeLists.txt  camera.hpp
libraries/camera/macos/: camera.mm
libraries/camera/platform/windows/: camera_device.hpp  camera_win.cpp
libraries/camera/windows/: camera.cpp
libraries/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp
libraries/renderer/include/: frame_surface_handler.hpp  renderer.hpp
libraries/renderer/src/: render_thread.cpp  renderer.cpp
libraries/utils/: CmakeLists.txt  glfw_window.cpp  glfw_window.hpp
libraries/utils/glfw_utils/include/: glfw_window.hpp
libraries/utils/glfw_utils/src/: glfw_window.cpp
libraries/utils/ogl_utils/include/: opengl.hpp
libraries/utils/ogl_utils/src/: opengl.cpp
offscreen_effect_player/include/: offscreen_effect_player.hpp  pixel_buffer.hpp
offscreen_effect_player/src/: offscreen_effect_player.cpp  pixel_buffer.cpp
offscreen_render_target/src/: offscreen_render_target.cpp
resources/effects/test_BG/: config.js  config.json
